şimdiye kadar ki yazılan kodlar refacktör edildi