@@ -3,7 +3,6 @@ package com.ifa.askop.core.exception;
 import lombok.Data;
 import org.springframework.http.HttpStatus;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Data
@@ -15,13 +14,11 @@ public class ApiErrorModel {
 
     public ApiErrorModel(HttpStatus status, List<String> errors) {
         this.status = status;
-        this.message = message;
         this.errors = errors;
     }
 
     public ApiErrorModel(HttpStatus status, String error) {
         this.status = status;
-        this.message = message;
-        errors = Arrays.asList(error);
+        errors = List.of(error);
     }
 }
